fix(ember-camac-ng): wrap collapsible title in label

--- a/ember-camac-ng/app/styles/_misc.scss
+++ b/ember-camac-ng/app/styles/_misc.scss
@@ -5,7 +5,3 @@
 .bold {
   font-weight: 700;
 }
-
-.default-font-size {
-  font-size: $global-font-size !important;
-}
